Initialized to use tito.
commit spec file

add spec file for fedora

commit .rpm

add copr makefile

Initialized to use tito.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,12 @@ pr-run-mode = "plan"
 [profile.dist]
 inherits = "release"
 lto = "thin"
+
+[package.metadata.rpm]
+package = "mini-calc"
+
+[package.metadata.rpm.cargo]
+buildflags = ["--release"]
+
+[package.metadata.rpm.targets]
+mini-calc = { path = "/usr/bin/mini-calc" }
