Initialized to use tito.
commit spec file

add spec file for fedora

commit .rpm

add copr makefile

Initialized to use tito.

move to tito

update version

revert to clean state

revert CARGO.TOML

generate package for debian and fedora

s

fix dist

correct

fix

remove .copr

a little spec file

remove spec

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mini-calc"
-version = "3.0.1"
+version = "3.1.0"
 license = "GPL-3.0-or-later"
 description = "A fully-featured minimalistic configurable rust calculator"
 homepage = "https://calc.nwa2coco.fr"
@@ -23,6 +23,21 @@ confy = "0.5.1"
 gnuplot = "0.0.39"
 serde = { version = "1.0.192", features = ["derive"] }
 atty = "0.2"
+
+
+
+[package.metadata.deb]
+name = "mini-calc"
+maintainer = "Charlotte Thomas"
+copyright = "GPLv3"
+license-file = "LICENSE"
+
+[package.metadata.generate-rpm]
+name = "mini-calc"
+version = "3.1.0"
+license = "GPLv3"
+assets = [{source="target/release/mini-calc", dest="/usr/bin/mini-calc", mode = "755"}]
+
 # Config for 'cargo dist'
 [workspace.metadata.dist]
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
@@ -40,3 +55,4 @@ pr-run-mode = "plan"
 [profile.dist]
 inherits = "release"
 lto = "thin"
+
