--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,15 @@ installers = ["shell"]
 targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
+
+[package.metadata.deb]
+name = "mini-calc"
+maintainer = "Charlotte Thomas"
+copyright = "GPLv3"
+license-file = "LICENSE"
+
+[package.metadata.generate-rpm]
+name = "mini-calc"
+version = "3.1.0"
+license = "GPLv3"
+assets = [{source="target/release/mini-calc", dest="/usr/bin/mini-calc", mode = "755"}]
