--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ name = "mini-calc"
 version = "3.1.0"
 license = "GPLv3"
 assets = [{source="target/release/mini-calc", dest="/usr/bin/mini-calc", mode = "755"}]
+
 # Config for 'cargo dist'
 [workspace.metadata.dist]
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
@@ -49,4 +50,9 @@ installers = ["shell"]
 targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
+
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
 
