remove (temporarily) macos from targets
add a shitload of linux

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ ci = ["github"]
 # The installers to generate for each app
 installers = ["shell"]
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
+targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-unknown-linux-gnu", "arm-unknown-linux-gnueabi", "i686-unknown-linux-gnu", "riscv64gc-unknown-linux-gnu"]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
 
