--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Deploy to Github Pages
         uses: JamesIves/github-pages-deploy-action@v4.4.1
         # ONLY if we're on main (so no PRs or feature branches allowed!)
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/website' }}
         with:
           branch: gh-pages
           # Gotta tell the action where to find oranda's output
