--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -20,8 +20,8 @@ jobs:
           mv typst-x86_64-unknown-linux-musl/typst .
       - name: Compile Files
         run: |
-          typst c manual/main.typ --font-path=fonts/
-          cp main.pdf ../manual.pdf
+          ./typst c manual/main.typ --font-path=manual/fonts/
+          cp manual/main.pdf manual.pdf
       - name: Clean Typst
         run: |
           rm -rf typst* 
